--- a/index.html
+++ b/index.html
@@ -31,33 +31,33 @@
   <!--navigation-->
   <body class="page">
     <header class="header">
-      <div class="container header-container">
-        <nav class="main-nav">
-          <a class="logo-link" href="./index.html"
-            >Web<span class="logo-header">Studio</span></a>
-          <ul class="list nav-list">
-            <li class="list-item">
-              <a class="link current link-header" href="./index.html">Студія</a>
+      <div class="header__container container">
+        <nav class="nav">
+          <a class="logo" href="./index.html"
+            >Web<span class="logo__header">Studio</span></a>
+          <ul class="nav__list list">
+            <li class="nav__item">
+              <a class="nav__link link current" href="./index.html">Студія</a>
             </li>
-            <li class="list-item">
-              <a class="link link-header" href="./portfolio.html">Портфоліо</a>
+            <li class="nav__item">
+              <a class="nav__link link" href="./portfolio.html">Портфоліо</a>
             </li>
-            <li class="list-item">
-              <a class="link link-header" href="">Контакти</a>
+            <li class="nav__item">
+              <a class="nav__link link" href="">Контакти</a>
             </li>
           </ul>
         </nav>
-        <ul class="list nav-list-contact">
-          <li class="list-item-contact">
-            <a class="link link-contact" href="mailto:info@devstudio.com">
-              <svg class="icon-contact" width="16" height="12">
+        <ul class="header__list list">
+          <li class="header__item">
+            <a class="header__link link" href="mailto:info@devstudio.com">
+              <svg class="header__icon" width="16" height="12">
               <use href="./images/icons.svg#mail"></use>
             </svg>
               info@devstudio.com</a>
           </li>
-          <li class="list-item-contact">
-            <a class="link link-contact" href="tel:+380961111111">
-              <svg class="icon-contact" width="10" height="16">
+          <li class="header__item">
+            <a class="header__link link" href="tel:+380961111111">
+              <svg class="header__icon" width="10" height="16">
                 <use href="./images/icons.svg#phone"></use>
               </svg>+38 096 111 11 11</a>
           </li>
@@ -445,7 +445,7 @@
     <footer class="footer">
       <div class="container box-footer">
         <div class="box-footer-contact">
-          <a class="logo-link" href="./index.html"
+          <a class="logo" href="./index.html"
           >Web<span class="logo-footer">Studio</span></a
         >
         <address>
