--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
 
       <!--HERO-->
       <section class="hero">
-        <h1 class="hero-title">
+        <h1 class="hero__title">
           Ефективні рішення для <br />
           вашого бізнесу
         </h1>
-        <button class="btn-hero" type="button" data-modal-open>
+        <button class="btn__hero" type="button" data-modal-open>
           Замовити послугу</button>
      </div>
       </section>
