--- a/index.html
+++ b/index.html
@@ -131,45 +131,45 @@
       <section class="section">
         <div class="container">
           <h2 class="visually-hidden">Особливості</h2>
-          <ul class="list features">
-            <li class="features-list-item">
-              <div class="box-icon"><svg class="icon-features" width="70" height="70">
+          <ul class="features list">
+            <li class="features__item">
+              <div class="features__box"><svg class="features__box--icon" width="70" height="70">
                 <use href="./images/icons.svg#antenna1"></use>
               </svg>
             </div>
-              <h3 class="subtitle">увага до деталей</h3>
-              <p class="subtitle-text">
+              <h3 class="features__subtitle subtitle">увага до деталей</h3>
+              <p class="features__subtitle--text">
                 Ідейні міркування, і навіть початок повсякденної роботи з
                 формування позиції.
               </p>
             </li>
-            <li class="features-list-item">
-              <div class="box-icon"> <svg class="icon-features" width="70" height="70">
+            <li class="features__item">
+              <div class="features__box"> <svg class="features__box--icon" width="70" height="70">
                 <use href="./images/icons.svg#clock2"></use>
               </svg></div>
-              <h3 class="subtitle">пунктуальність</h3>
-              <p class="subtitle-text">
+              <h3 class="features__subtitle subtitle">пунктуальність</h3>
+              <p class="features__subtitle--text">
                 Завдання організації, особливо рамки і місце навчання кадрів
                 тягне у себе.
               </p>
             </li>
-            <li class="features-list-item">
-              <div class="box-icon"> 
-              <svg class="icon-features" width="70" height="70">
+            <li class="features__item">
+              <div class="features__box"> 
+              <svg class="features__box--icon" width="70" height="70">
                 <use href="./images/icons.svg#diagram3"></use>
               </svg></div>
-              <h3 class="subtitle">планування</h3>
-              <p class="subtitle-text">
+              <h3 class="features__subtitle subtitle">планування</h3>
+              <p class="features__subtitle--text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
-            <li class="features-list-item">
-              <div class="box-icon"> 
-              <svg class="icon-features" width="70" height="70">
+            <li class="features__item">
+              <div class="features__box"> 
+              <svg class="features__box--icon" width="70" height="70">
                 <use href="./images/icons.svg#astronaut4"></use>
               </svg></div>
-              <h3 class="subtitle">сучасні технології</h3>
-              <p class="subtitle-text">
+              <h3 class="features__subtitle subtitle">сучасні технології</h3>
+              <p class="features__subtitle--text">
                 Значимість цих проблем настільки очевидна, що реалізація
                 планових завдань.
               </p>
