--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     />
     <!--custom styles-->
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <!--navigation-->
   <body class="page">
