--- a/portfolio.html
+++ b/portfolio.html
@@ -287,7 +287,7 @@
     <footer class="footer">
       <div class="container box-footer">
         <div class="box-footer-contact">
-          <a class="logo-link" href="./index.html"
+          <a class="logo" href="./index.html"
           >Web<span class="logo-footer">Studio</span></a
         >
         <address>
@@ -360,5 +360,6 @@
       </div>
       </div>
     </footer>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
