--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,7 @@
     </header>
     <main>
       <!--майбутній фільтр-->
-      <section class="section section-portfolio">
+      <section class="section">
         <div class="container">
         <!--прихований заголовок-->
         <h1 class="visually-hidden">Наші роботи</h1>
