--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@
           <h2 class="visually-hidden">Особливості</h2>
           <ul class="features list">
             <li class="features__item">
-              <div class="features__box"><svg class="features__box--icon" width="70" height="70">
+              <div class="features__box"><svg 
+                class="features__box--icon" width="70" height="70">
                 <use href="./images/icons.svg#antenna1"></use>
               </svg>
             </div>
